# mritogether-2022-software-testing

./: .gitignore  .presentation_notes.txt  README.md  pyproject.toml
.github/workflows/: main.yaml  tests.yml
analysis/: main.py
tests/: test_main.py
